[package]
name = "tzf"
version = "0.2.3"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.pgrx]
pg_version = 16
sql-generator = true

[features]
default = []
pg14 = ["pgrx/pg14"]
pg15 = ["pgrx/pg15"]
pg16 = ["pgrx/pg16"]
pg17 = ["pgrx/pg17"]
pg18 = ["pgrx/pg18"]
pg_test = []

[dependencies]
lazy_static = "1.5.0"
pgrx = "0.16.1"
tzf-rs = "1.0.1"

[dev-dependencies]
pgrx-tests = "0.16.1"

[[bin]]
name = "pgrx_embed_tzf"
path = "./src/bin/pgrx_embed.rs"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
