[package]
name = "tzf"
version = "0.2.4"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.pgrx]
pg_version = 16
sql-generator = true

[features]
default = []
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
pg_test = ["dep:cities-json"]

[dependencies]
cities-json = { version = "0.6.8", optional = true }
lazy_static = "1.5.0"
pgrx = "=0.17.0"
tzf-rs = "1.1.5"

[dev-dependencies]
pgrx-tests = "=0.17.0"

[[bin]]
name = "pgrx_embed_tzf"
path = "./src/bin/pgrx_embed.rs"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
